updata validation of npi number

--- a/scripts/transformation_load.ipynb
+++ b/scripts/transformation_load.ipynb
@@ -634,8 +634,11 @@
     "# Validates standard 5-digit or ZIP+4 formats\n",
     "zip_code_pattern = r'^\\d{5}(-\\d{4})?$'\n",
     "\n",
+    "#Validates standard npi number\n",
+    "npi_number_pattern = r'\\d{10}$'\n",
+    "\n",
     "# Filter DataFrame based on valid states and zip code pattern\n",
-    "df_hospitals = df_hospitals[df_hospitals['state'].isin(valid_states) & df_hospitals['zip_code'].str.match(zip_code_pattern)]\n",
+    "df_hospitals = df_hospitals[df_hospitals['state'].isin(valid_states) & df_hospitals['zip_code'].str.match(zip_code_pattern)] & df_hospitals['npi_number'].str.match(npi_number_pattern)]\n",
     "\n",
     "# covert other types using astype\n",
     "df_hospitals = df_hospitals.astype({\n",
@@ -1206,6 +1209,8 @@
     "    df_prices = pd.concat([df_prices, chunk], ignore_index=True)\n",
     "    \n",
     "    print(len(df_prices))\n",
+    "\n",
+    "df_prices = df_prices['npi_number'].str.match(npi_number_pattern)\n",
     "    \n",
     "df_prices = df_prices.fillna('none')\n",
     "\n",
@@ -1357,7 +1362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
