--- a/scripts/extract_data_from_source.ipynb
+++ b/scripts/extract_data_from_source.ipynb
@@ -448,8 +448,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1bc90fbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted time for 723 loops: 15.778897735546138 seconds\n",
+      "Total time for 723 loops: 100.11634084417669 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "loop_numbers = list(range(1, 138))  # Loop numbers from 1 to 137\n",
+    "time_taken = [\n",
+    "    0.08, 0.12, 0.17, 0.18, 0.21, 0.21, 0.24, 0.25, 0.27, 0.31, 0.43, 0.43, 0.42, 0.43, 0.49, 0.62, 0.59, 0.61, 0.57, 0.65,\n",
+    "    0.68, 0.61, 0.69, 0.66, 0.70, 0.72, 0.73, 0.76, 0.75, 0.80, 0.81, 0.90, 0.88, 0.89, 0.87, 0.91, 0.92, 0.96, 0.99, 1.02, 1.07,\n",
+    "    1.00, 1.02, 1.03, 1.13, 1.08, 1.13, 1.14, 1.13, 1.18, 1.17, 1.24, 1.22, 1.30, 1.25, 1.31, 1.28, 1.35, 1.40, 1.36, 1.43, 1.44,\n",
+    "    1.50, 1.48, 1.54, 1.49, 1.53, 1.55, 1.58, 1.54, 1.58, 1.64, 1.64, 1.65, 1.66, 1.69, 1.73, 1.76, 1.83, 1.85, 1.79, 1.82, 1.86,\n",
+    "    1.87, 1.92, 1.90, 1.99, 1.98, 2.01, 2.01, 2.06, 2.09, 2.07, 2.11, 2.16, 2.13, 2.19, 2.17, 2.24, 2.25, 2.25, 2.26, 2.43, 2.73,\n",
+    "    2.34, 2.37, 2.40, 2.47, 2.43, 2.45, 2.52, 2.55, 2.54, 2.60, 2.57, 2.64, 2.66, 2.75, 2.72, 2.75, 2.76, 2.78, 2.79, 2.81, 2.86,\n",
+    "    2.81, 2.92, 2.85, 2.96, 2.88, 3.24, 2.98, 3.01, 3.22, 3.04, 3.12, 3.27\n",
+    "]\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "# Reshape the data for sklearn\n",
+    "import numpy as np\n",
+    "X = np.array(loop_numbers).reshape(-1, 1)\n",
+    "y = np.array(time_taken)\n",
+    "\n",
+    "# Fit linear regression model\n",
+    "model = LinearRegression()\n",
+    "model.fit(X, y)\n",
+    "\n",
+    "predicted_time_723_loops = model.predict([[723]])[0]\n",
+    "print(\"Predicted time for 723 loops:\", predicted_time_723_loops, \"seconds\")\n",
+    "\n",
+    "predicted_time_one_loop = model.predict([[1]])[0]\n",
+    "total_time_723_loops = predicted_time_one_loop * 723\n",
+    "print(\"Total time for 723 loops:\", total_time_723_loops, \"seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae93558f",
    "metadata": {},
    "outputs": [],
    "source": []
